--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,10 @@
 @use './styles/partials/global';
 
+.main {
+    width: 100vw;
+    height: 100vh;
+    background-color: aliceblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
