--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -16,3 +16,56 @@ a {
 ul, ol {
     list-style: none;
 }
+
+
+.location {
+    &--a {
+        grid-column: 1;
+    }
+    &--b {
+        grid-column: 2;
+    }
+    &--c {
+        grid-column: 3;
+    }
+    &--d {
+        grid-column: 4; 
+    }
+    &--e {
+        grid-column: 5;
+    }
+    &--f {
+        grid-column: 6;
+    }
+    &--g {
+        grid-column: 7;
+    }
+    &--h {
+        grid-column: 8;
+    }
+
+    &--1 {
+        grid-row: 8;
+    }
+    &--2 {
+        grid-row: 7;
+    }
+    &--3 {
+        grid-row: 6;
+    }
+    &--4 {
+        grid-row: 5;
+    }
+    &--5 {
+        grid-row: 4;
+    }
+    &--6 {
+        grid-row: 3;
+    }
+    &--7 {
+        grid-row: 2;
+    }
+    &--8 {
+        grid-row: 1;
+    }
+}
