Add ability to select chess piece to move

--- a/src/components/Square/Square.scss
+++ b/src/components/Square/Square.scss
@@ -5,4 +5,10 @@
     &--light {
         background-color: coral;
     }
+    &--selected {
+        background-color: darkseagreen;
+    }
+    &--potential {
+        background-color: blueviolet;
+    }
 }
