Highlight potential moves for knights

--- a/src/components/Square/Square.scss
+++ b/src/components/Square/Square.scss
@@ -9,6 +9,7 @@
         background-color: darkseagreen;
     }
     &--potential {
+        border: 1px solid rgb(87, 31, 139);
         background-color: blueviolet;
         cursor: pointer;
     }
