--- a/src/components/Piece/Piece.scss
+++ b/src/components/Piece/Piece.scss
@@ -1,5 +1,7 @@
 .chess-piece {
     height: 100%;
     justify-self: center;
-    cursor: pointer;
+    &--clickable {
+        cursor: pointer;
+    }
 }
